<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, BurdaAppStartActivity!</string>
    <string name="app_name">Burda app</string>
    <string name="mygtukas_naujienos">Naujienos</string>
    <string name="mygtukas_lojalumas">Lojalumo programa</string>
    <string name="mygtukas_prekiu_zenklai">Prekių ženklai</string>
    <string name="mygtukas_parduotuves">Parduotuvės</string>
    <string name="shops_content_1">* Vilniuje, PC „Europa“ Konstitucijos pr. 7a:</string>
    <string name="shops_content_2">* Vilniuje, PC „Panorama“ Saltoniškių g. 9: </string>
    <string name="shops_content_3">* Kaune, Laisvės alėjoje, Laisvės al. 70:</string>
          <string name="shops_content_1_2">  "Marc O'Polo", "Grey&amp;White", "Gant", "More&amp;More"</string>
    <string name="shops_content_2_2">"Marc O'Polo", "Grey&amp;White", "Gant"</string>
    <string name="shops_content_3_2">        "Marc O'Polo"</string>
    <string name="mygtukas_artimiausia_parduotuve">Artimiausios parduotuvės</string>
    <string name="more_content">Kaip pripažinto mados ženklo, Starnberg More &amp; More pagrindinis akcentas yra sėkmingai autentiškos, natūralios, moteriškumą ir detalumą pabrėžiančios kolekcijos, orientuotos į vidutiniškai brangių šiuolaikinių moteriškų drabužių nišą. Ypatinga svarba teikiama teisingam kainos ir išvaizdos santykiui, kartu išlaikant aukštos kokybės standartus. Siekis madą praturtinti moteriškumą atskleidžiančiomis, rafinuotomis interpretacijomis, pabrėžtomis išskirtinio More &amp; More braižo, nuo pat kompanijos ištakų iki šių dienų išlieka sėkmingo ženklo filosofijos pagrindu.</string>
    <string name="mop_content">1967 metais švedams Rolf Lind ir Gote Huss bei amerikiečiui Jerry O’Sheets Stokholme gimė mintis. Jie norėjo pasiūlyti jaunimui paprastą madą, kuri tiks jų gyvensenai ir atspindės jų asmenybę. Taip atsirado Marc O’Polo prekinis ženklas. Jie nutarė naudoti natūralias medžiagas: medvilnę, vilną, liną, šilką, nes tik iš natūralių medžiagų drabužiai atrodė taip, kaip jie ir norėjo. Sintetinėmis medžiagomis papildoma tik tuomet, kai tai yra būtina. “Medžiagos iš gamtos” buvo ir visada liks Marc O’Polo širdis ir siela, prekės ženklo tapatumo branduolys. Marc O’Polo tokiu būdu tapo mados novatoriumi ir aukščiausia kokybe garsėjančiu prekiniu ženklu Europoje. Šiandien Marc O‘Polo siūlo kasdieninius, sportinius drabužius daugiausia is natūralių medžiagų.</string>
    <string name="gant_content">Gant rūbų stilius atspindi amerikietišką paprastumą ir europietišką eleganciją. Kompanijos idealai neatsiejami nuo autentiško Amerikos Rytų pakrantės mados palikimo, kuris puoselėjamas nuo pat 1949-ųjų – ženklo įkūrimo metų. Per daugiau nei pusę savo gyvavimo amžiaus kompanija plėtojosi ir klestėjo, patyrė nemažai europietiškos įtakos, kol galop tapo pasaulinio lygio ženklu. Gant koziris – itin platus vyriškų, moteriškų ir vaikiškų drabužių pasirinkimas.</string>
    <string name="lauren_content">Nuo savo pradžios – 1967 metais, Ralph Lauren kūrė amerikietiško stiliaus esmę, suteikdamas madai naują prabangos sampratą. Išlaikydamas trapų balansą tarp to, kas šiuolaikiška, ir to, kas laikui nepaklūsta, Ralph Lauren siūlo kolekcijas, kurios padeda kurti unikalų asmeninį stilių, praturtintą aliuzijomis į turtingą Amerikos mados istoriją: nuo šiurkštaus Laukinių Vakarų grožio iki auksinio Holivudo glamūro amžiaus, nuo elegantiškų industrinio dizaino inovacijų iki raitelių mados palikimo. Per keturiasdešimt savo gyvavimo metų Ralph Lauren davė pradžią Polo ženklui, kuris išsiplėtojo iš vienintelio naujoviško kaklaraiščio dizaino, o dabar visame pasaulyje yra laikomas tikra Mados Legenda. Nuo tarptautinio pripažinimo sulaukusių kolekcijų, nuolatos puošiančių podiumą, iki nepriekaištingo sportinio apavo Ralph Lauren rūbai ir aksesuarai kuria nepriekaištingo, nesenstančio stiliaus aurą.</string>
    <string name="newhouse_content">Natūralu, tikra, klasiška, džiaugsminga ir rūpestinga – tai yra esminiai epitetai, kurie apibūdina New House darbą, ypač dabar, kai kompanija grįžo prie savo ištakų, prie to istorinio pavyzdžio, kurį kitiems ženklams New House teikė dar prieš 24 metus.

New House reprezentuoja amžinus ir nenutrūkstamus mados principus, džiugindamas savo klientus prekėmis, kurios apima įvairias mados sroves ir visuomet garantuoja aukščiausią kokybę. New House tiki, jog drabužiai turi skatinti individualumą ir evoliucionuoti kartu su juo.

Drabužiai taip pat turi harmoningai derėti su besikeičiančia, dinamiška aplinka ir atspindėti gyvenimo stilių per rafinuotą paprastumą. Kadangi šiandien mums visiems nepaprastai svarbus planetos likimas, esminis tikslas yra patvarių ir patikimų drabužių mada, paverčianti rūbų pasirinkimą ilgalaike kliento investicija.

New House – tai šiuolaikinės klasikos simbolis.</string>
    <string name="programa_content">Savo ištikimiausiems klientams mes nuolat teikiame išskirtinius pasiūlymus, geriausias nuolaidas ir ypatingas dovanas. Todėl kviečiame tapti mūsų lojalumo programos nariu ir mėgautis programos teikiama nauda:

nuolaida naujausioms kolekcijoms;
auganti asmeninė nuolaida;
išskirtiniai pasiūlymai ir papildomos nuolaidos.</string>

</resources>